# leadscanner_taskbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pyrightconfig.json  requirements.txt
migrations/: env.py  script.py.mako
migrations/versions/: 499864d93d4f_init.py
services/caddy/: Caddyfile
src/: config.py  crud.py  database.py  main.py  models.py  schemas.py  service.py
src/bot_api/: taskbot.py
src/bot_telegram/: keybords.py  taskbot.py
