[tool.poetry]
name = "leadscanner-test"
version = "0.1.0"
description = ""
authors = ["Anton Semenov <s.anton@live.ru>"]
readme = "README.md"
packages = [{include = "leadscanner_test"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
alembic = "^1.8.1"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
aiogram = "^2.23.1"
asyncpg = "^0.27.0"
sqlalchemy = "^1.4.44"
psycopg2-binary = "^2.9.5"
typer = "^0.7.0"
aiosqlite = "^0.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

